// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interweave (with autolinking) doesnt render anchor links within anchor links 1`] = `
<Interweave
  content="- https://127.0.0.1/foo
  - <a href="www.domain.com">www.domain.com</a>
  - (http://domain.com/some/path?with=query)
  - <a href="http://domain.com">This text should stay</a>"
  matchers={[ new EmailMatcher(), new HashtagMatcher(), new IpMatcher(), new UrlMatcher() ]}
  tagName="div"
>
  <Markup
    parsedContent={[
      "- ",
      <Url
      url="https://127.0.0.1/foo"
      urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
    />,
      "
    - ",
      <Element attributes={{ href: "www.domain.com" }} tagName="a" />,
      "
    - (",
      ... 3 more,
    ]}
    tagName="div"
  >
    <Element tagName="div">
      <div>
        - 
        <Url
          url="https://127.0.0.1/foo"
          urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
        >
          <Link href="https://127.0.0.1/foo">
            <a href="https://127.0.0.1/foo" rel="noopener noreferrer">
              https://127.0.0.1/foo
            </a>
          </Link>
        </Url>
        
- 
        <Element attributes={{ href: "www.domain.com" }} tagName="a">
          <a href="www.domain.com">
            www.domain.com
          </a>
        </Element>
        
- (
        <Url
          url="http://domain.com/some/path?with=query"
          urlParts={{
            auth: "",
            fragment: "",
            host: "domain.com",
            path: "/some/path",
            port: "",
            ... 2 more,
          }}
        >
          <Link href="http://domain.com/some/path?with=query">
            <a
              href="http://domain.com/some/path?with=query"
              rel="noopener noreferrer"
            >
              http://domain.com/some/path?with=query
            </a>
          </Link>
        </Url>
        )
- 
        <Element attributes={{ href: "http://domain.com" }} tagName="a">
          <a href="http://domain.com">
            This text should stay
          </a>
        </Element>
      </div>
    </Element>
  </Markup>
</Interweave>
`;

exports[`Interweave (with autolinking) renders HTML text with all matchers 1`] = `
<Interweave
  content="<h1>Lorem ipsum dolor sit amet</h1>
  
  <p><b>Consectetur adipiscing elit.</b> Donec massa lorem, mollis non commodo quis, ultricies at elit. email@domain.com. Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. #interweave Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, <a href="www.domain.com">www.domain.com</a> @username.</p>
  
  <div>Curabitur lectus odio, <em>tempus quis velit vitae, cursus sagittis nulla</em>. Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. https://127.0.0.1/foo Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (http://domain.com/some/path?with=query). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.</div>
  
  <section>#blessed #interweave #milesj</section>"
  matchers={[
    new EmailMatcher(),
    new HashtagMatcher(),
    new IpMatcher(),
    new UrlMatcher(),
    new MentionMatcher(),
  ]}
  mentionUrl="http://test.com/{{mention}}"
  tagName="div"
>
  <Markup
    parsedContent={[
      <Element tagName="h1" />,
      "
    
    ",
      <Element tagName="p" />,
      "
    
    ",
      <Element tagName="div" />,
      ... 2 more,
    ]}
    tagName="div"
  >
    <Element tagName="div">
      <div>
        <Element tagName="h1">
          <h1>Lorem ipsum dolor sit amet</h1>
        </Element>
        


        <Element tagName="p">
          <p>
            <Element tagName="b">
              <b>Consectetur adipiscing elit.</b>
            </Element>
             Donec massa lorem, mollis non commodo quis, ultricies at elit. 
            <Email
              email="email@domain.com"
              emailParts={{ host: "domain.com", username: "email" }}
              mentionUrl="http://test.com/{{mention}}"
            >
              <Link
                href="mailto:email@domain.com"
                mentionUrl="http://test.com/{{mention}}"
              >
                <a href="mailto:email@domain.com" rel="noopener noreferrer">
                  email
                  <Mention
                    mention="domain"
                    mentionUrl="http://test.com/{{mention}}"
                  >
                    <Link href="http://test.com/domain">
                      <a href="http://test.com/domain" rel="noopener noreferrer">
                        @domain
                      </a>
                    </Link>
                  </Mention>
                  .com
                </a>
              </Link>
            </Email>
            . Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. 
            <Hashtag
              hashtag="#interweave"
              mentionUrl="http://test.com/{{mention}}"
            >
              <Link href="interweave" mentionUrl="http://test.com/{{mention}}">
                <a href="interweave" rel="noopener noreferrer">
                  #interweave
                </a>
              </Link>
            </Hashtag>
             Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, 
            <Element attributes={{ href: "www.domain.com" }} tagName="a">
              <a href="www.domain.com">
                www.domain.com
              </a>
            </Element>
             
            <Mention mention="username" mentionUrl="http://test.com/{{mention}}">
              <Link href="http://test.com/username">
                <a href="http://test.com/username" rel="noopener noreferrer">
                  @username
                </a>
              </Link>
            </Mention>
            .
          </p>
        </Element>
        


        <Element tagName="div">
          <div>
            Curabitur lectus odio, 
            <Element tagName="em">
              <em>tempus quis velit vitae, cursus sagittis nulla</em>
            </Element>
            . Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. 
            <Url
              mentionUrl="http://test.com/{{mention}}"
              url="https://127.0.0.1/foo"
              urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
            >
              <Link
                href="https://127.0.0.1/foo"
                mentionUrl="http://test.com/{{mention}}"
              >
                <a href="https://127.0.0.1/foo" rel="noopener noreferrer">
                  https://127.0.0.1/foo
                </a>
              </Link>
            </Url>
             Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (
            <Url
              mentionUrl="http://test.com/{{mention}}"
              url="http://domain.com/some/path?with=query"
              urlParts={{
                auth: "",
                fragment: "",
                host: "domain.com",
                path: "/some/path",
                port: "",
                ... 2 more,
              }}
            >
              <Link
                href="http://domain.com/some/path?with=query"
                mentionUrl="http://test.com/{{mention}}"
              >
                <a
                  href="http://domain.com/some/path?with=query"
                  rel="noopener noreferrer"
                >
                  http://domain.com/some/path?with=query
                </a>
              </Link>
            </Url>
            ). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.
          </div>
        </Element>
        


        <Element tagName="section">
          <section>
            <Hashtag hashtag="#blessed" mentionUrl="http://test.com/{{mention}}">
              <Link href="blessed" mentionUrl="http://test.com/{{mention}}">
                <a href="blessed" rel="noopener noreferrer">
                  #blessed
                </a>
              </Link>
            </Hashtag>
             
            <Hashtag
              hashtag="#interweave"
              mentionUrl="http://test.com/{{mention}}"
            >
              <Link href="interweave" mentionUrl="http://test.com/{{mention}}">
                <a href="interweave" rel="noopener noreferrer">
                  #interweave
                </a>
              </Link>
            </Hashtag>
             
            <Hashtag hashtag="#milesj" mentionUrl="http://test.com/{{mention}}">
              <Link href="milesj" mentionUrl="http://test.com/{{mention}}">
                <a href="milesj" rel="noopener noreferrer">
                  #milesj
                </a>
              </Link>
            </Hashtag>
          </section>
        </Element>
      </div>
    </Element>
  </Markup>
</Interweave>
`;

exports[`Interweave (with autolinking) renders large blocks of text with all matchers 1`] = `
<Interweave
  content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa lorem, mollis non commodo quis, ultricies at elit. email@domain.com. Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. #interweave Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, www.domain.com. @username
  
  Curabitur lectus odio, tempus quis velit vitae, cursus sagittis nulla. Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. https://127.0.0.1/foo Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (http://domain.com/some/path?with=query). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.
  
  #blessed #interweave #milesj"
  matchers={[
    new EmailMatcher(),
    new HashtagMatcher(),
    new IpMatcher(),
    new UrlMatcher(),
    new MentionMatcher(),
  ]}
  mentionUrl="http://test.com/{{mention}}"
  tagName="div"
>
  <Markup
    parsedContent={[
      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa lorem, mollis non commodo quis, ultricies at elit. ",
      <Email
      email="email@domain.com"
      emailParts={{ host: "domain.com", username: "email" }}
      mentionUrl="http://test.com/{{mention}}"
    />,
      ". Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. ",
      <Hashtag hashtag="#interweave" mentionUrl="http://test.com/{{mention}}" />,
      " Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, ",
      ... 17 more,
    ]}
    tagName="div"
  >
    <Element tagName="div">
      <div>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec massa lorem, mollis non commodo quis, ultricies at elit. 
        <Email
          email="email@domain.com"
          emailParts={{ host: "domain.com", username: "email" }}
          mentionUrl="http://test.com/{{mention}}"
        >
          <Link
            href="mailto:email@domain.com"
            mentionUrl="http://test.com/{{mention}}"
          >
            <a href="mailto:email@domain.com" rel="noopener noreferrer">
              email
              <Mention mention="domain" mentionUrl="http://test.com/{{mention}}">
                <Link href="http://test.com/domain">
                  <a href="http://test.com/domain" rel="noopener noreferrer">
                    @domain
                  </a>
                </Link>
              </Mention>
              .com
            </a>
          </Link>
        </Email>
        . Aliquam a arcu porttitor, aliquam eros sed, convallis massa. Nunc vitae vehicula quam, in feugiat ligula. 
        <Hashtag hashtag="#interweave" mentionUrl="http://test.com/{{mention}}">
          <Link href="interweave" mentionUrl="http://test.com/{{mention}}">
            <a href="interweave" rel="noopener noreferrer">
              #interweave
            </a>
          </Link>
        </Hashtag>
         Donec eu sem non nibh condimentum luctus. Vivamus pharetra feugiat blandit. Vestibulum neque velit, semper id vestibulum id, viverra a felis. Integer convallis in orci nec bibendum. Ut consequat posuere metus, 
        <Url
          mentionUrl="http://test.com/{{mention}}"
          url="www.domain.com"
          urlParts={{ auth: "", fragment: "", host: "www.domain.com", path: "", port: "", ... 2 more }}
        >
          <Link
            href="http://www.domain.com"
            mentionUrl="http://test.com/{{mention}}"
          >
            <a href="http://www.domain.com" rel="noopener noreferrer">
              www.domain.com
            </a>
          </Link>
        </Url>
        . 
        <Mention mention="username" mentionUrl="http://test.com/{{mention}}">
          <Link href="http://test.com/username">
            <a href="http://test.com/username" rel="noopener noreferrer">
              @username
            </a>
          </Link>
        </Mention>
        <Element selfClose tagName="br">
          <br />
        </Element>
        <Element selfClose tagName="br">
          <br />
        </Element>
        Curabitur lectus odio, tempus quis velit vitae, cursus sagittis nulla. Maecenas sem nulla, tempor nec risus nec, ultricies ultricies magna. 
        <Url
          mentionUrl="http://test.com/{{mention}}"
          url="https://127.0.0.1/foo"
          urlParts={{ auth: "", fragment: "", host: "127.0.0.1", path: "/foo", port: "", ... 2 more }}
        >
          <Link
            href="https://127.0.0.1/foo"
            mentionUrl="http://test.com/{{mention}}"
          >
            <a href="https://127.0.0.1/foo" rel="noopener noreferrer">
              https://127.0.0.1/foo
            </a>
          </Link>
        </Url>
         Nulla malesuada lacinia libero non mollis. Curabitur id lacus id dolor vestibulum ornare quis a nisi (
        <Url
          mentionUrl="http://test.com/{{mention}}"
          url="http://domain.com/some/path?with=query"
          urlParts={{
            auth: "",
            fragment: "",
            host: "domain.com",
            path: "/some/path",
            port: "",
            ... 2 more,
          }}
        >
          <Link
            href="http://domain.com/some/path?with=query"
            mentionUrl="http://test.com/{{mention}}"
          >
            <a
              href="http://domain.com/some/path?with=query"
              rel="noopener noreferrer"
            >
              http://domain.com/some/path?with=query
            </a>
          </Link>
        </Url>
        ). Pellentesque ac finibus mauris. Sed eu luctus diam. Quisque porta lectus in turpis imperdiet dapibus.
        <Element selfClose tagName="br">
          <br />
        </Element>
        <Element selfClose tagName="br">
          <br />
        </Element>
        <Hashtag hashtag="#blessed" mentionUrl="http://test.com/{{mention}}">
          <Link href="blessed" mentionUrl="http://test.com/{{mention}}">
            <a href="blessed" rel="noopener noreferrer">
              #blessed
            </a>
          </Link>
        </Hashtag>
         
        <Hashtag hashtag="#interweave" mentionUrl="http://test.com/{{mention}}">
          <Link href="interweave" mentionUrl="http://test.com/{{mention}}">
            <a href="interweave" rel="noopener noreferrer">
              #interweave
            </a>
          </Link>
        </Hashtag>
         
        <Hashtag hashtag="#milesj" mentionUrl="http://test.com/{{mention}}">
          <Link href="milesj" mentionUrl="http://test.com/{{mention}}">
            <a href="milesj" rel="noopener noreferrer">
              #milesj
            </a>
          </Link>
        </Hashtag>
      </div>
    </Element>
  </Markup>
</Interweave>
`;
